feat: check directories

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -50,9 +50,14 @@ jobs:
 
       - name: 📦 Install Dependencies
         run: pnpm install --no-frozen-lockfile
+      - name: 🔍 Print Current Directory
+        run: pwd
+
+      - name: 🔍 List All Files in Workspace
+        run: ls -alR
 
       - name: 🐳 Start Docker Services
-        run: docker compose --env-file .env -f ./src/infra/docker-compose.yml up -d
+        run: docker compose --env-file .env -f ${{ github.workspace }}/src/infra/docker-compose.yml up -d
 
       - name: 🔍 Check Running Containers
         run: docker ps -a
