--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,6 +26,8 @@ jobs:
     steps:
       - name: 📥 Checkout Repository
         uses: actions/checkout@v4
+        with:
+          path: sem-patria-community
 
       - name: 🔍 List Repository Files
         run: ls -al
@@ -53,11 +55,8 @@ jobs:
       - name: 🔍 Print Current Directory
         run: pwd
 
-      - name: 🔍 List All Files in Workspace
-        run: ls -alR
-
       - name: 🐳 Start Docker Services
-        run: docker compose --env-file .env -f ${{ github.workspace }}/src/infra/docker-compose.yml up -d
+        run: docker compose --env-file .env -f $GITHUB_WORKSPACE/src/infra/docker-compose.yml up -d
 
       - name: 🔍 Check Running Containers
         run: docker ps -a
