--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -56,9 +56,9 @@ jobs:
         run: ls -al
       - name: 📜 Inspect PostgreSQL Logs
         run: docker logs sem-patria-local-db || true
-      - name: 🏗 Install `dockerize` Manually
+      - name: 🏗 Install `dockerize`
         run: |
-          wget https://github.com/jwilder/dockerize/releases/download/v0.6.1/dockerize-linux-amd64 -O /usr/local/bin/dockerize
+          wget https://bin.equinox.io/c/4VmDzA7iaHb/dockerize-linux-amd64 -O /usr/local/bin/dockerize
           chmod +x /usr/local/bin/dockerize
           dockerize --version
 
