--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -54,8 +54,6 @@ jobs:
         run: pwd
       - name: 🔍 Debug List Files in the Current Directory
         run: ls -al
-      - name: 📜 Inspect PostgreSQL Logs
-        run: docker logs sem-patria-local-db || true
 
       - name: 🐳 Start Docker Services
         run: docker compose --env-file .env -f ./src/infra/docker-compose.yaml up -d
@@ -69,7 +67,7 @@ jobs:
       - name: ⏳ Wait for PostgreSQL to be Ready
         run: |
           for i in {1..20}; do
-            if docker exec sem-patria-local-db pg_isready -U postgres; then
+            if docker exec sem-patria-local-db pg_isready -U $POSTGRES_USER -d $POSTGRES_DB; then
               echo "✅ PostgreSQL is ready."
               exit 0
             fi
@@ -79,6 +77,8 @@ jobs:
           echo "❌ PostgreSQL did not start in time."
           docker logs sem-patria-local-db
           exit 1
+      - name: 📜 Inspect PostgreSQL Logs
+        run: docker logs sem-patria-local-db || true
 
       - name: 🔍 Ensure Prisma Can Connect
         run: |
