--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -27,66 +27,46 @@ jobs:
       - name: 📥 Checkout Repository
         uses: actions/checkout@v4
 
-      - name: 🔍 List Repository Files
-        run: ls -al
-
-      - name: 📄 Create `.env` File
-        run: |
-          echo "UPLOADTHING_SECRET=$UPLOADTHING_SECRET" >> .env
-          echo "RESEND_API_KEY=$RESEND_API_KEY" >> .env
-          echo "NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=$NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY" >> .env
-          echo "BASE_URL_PRODUCTION=$BASE_URL_PRODUCTION" >> .env
-          echo "BASE_URL_DEVELOPMENT=$BASE_URL_DEVELOPMENT" >> .env
-          echo "CLERK_TESTING_TOKEN=$CLERK_TESTING_TOKEN" >> .env
-          echo "POSTGRES_USER=$POSTGRES_USER" >> .env
-          echo "POSTGRES_PASSWORD=$POSTGRES_PASSWORD" >> .env
-          echo "POSTGRES_PORT=$POSTGRES_PORT" >> .env
-          echo "POSTGRES_DB=$POSTGRES_DB" >> .env
-          echo "DATABASE_URL=postgres://postgres:$POSTGRES_PASSWORD@sem-patria-local-db:5432/$POSTGRES_DB" >> .env
-        shell: bash
-
-      - name: 📦 Install pnpm
-        run: npm install -g pnpm
-
-      - name: 📦 Install Dependencies
-        run: pnpm install --no-frozen-lockfile
-      - name: 🔍 Print Current Directory
-        run: pwd
-      - name: 🔍 Debug List Files in the Current Directory
-        run: ls -al
-
       - name: 🐳 Start Docker Services
         run: docker compose --env-file .env -f ./src/infra/docker-compose.yaml up -d
 
       - name: 🔍 Check Running Containers
         run: docker ps -a
 
-      # - name: 🔍 Test Database Connection
-      #   run: docker exec sem-patria-local-db psql -U $POSTGRES_USER -d $POSTGRES_DB -h sem-patria-local-db -c "SELECT 1;"
-
-      - name: ⏳ Wait for PostgreSQL to be Ready
+      - name: 🔍 Ensure PostgreSQL is Ready
         run: |
           for i in {1..20}; do
-            if docker exec sem-patria-local-db pg_isready -U $POSTGRES_USER -d $POSTGRES_DB; then
+            STATUS=$(docker inspect --format='{{.State.Health.Status}}' sem-patria-local-db)
+            if [ "$STATUS" == "healthy" ]; then
               echo "✅ PostgreSQL is ready."
               exit 0
             fi
-            echo "⏳ Waiting for database... ($i/20)"
+            echo "⏳ Waiting for PostgreSQL to be ready... ($i/20)"
             sleep 5
           done
           echo "❌ PostgreSQL did not start in time."
           docker logs sem-patria-local-db
           exit 1
-      - name: 📜 Inspect PostgreSQL Logs
-        run: docker logs sem-patria-local-db || true
+
+      - name: 🔍 Manually Check PostgreSQL Connection
+        run: docker exec sem-patria-local-db pg_isready -U $POSTGRES_USER -d $POSTGRES_DB
+
+      - name: 🔍 Ensure Database Exists
+        run: |
+          docker exec sem-patria-local-db psql -U $POSTGRES_USER -d postgres -c "\l"
 
       - name: 🔍 Ensure Prisma Can Connect
         run: |
-          until pnpm exec prisma migrate status --schema=prisma/schema.prisma; do
+          for i in {1..20}; do
+            if pnpm exec prisma migrate status --schema=prisma/schema.prisma; then
+              echo "✅ Prisma is ready."
+              exit 0
+            fi
             echo "⏳ Waiting for Prisma..."
             sleep 5
           done
-          echo "✅ Prisma is ready."
+          echo "❌ Prisma did not start in time."
+          exit 1
 
       - name: 🌱 Seed Database
         run: pnpm seed
