--- a/src/infra/docker-compose.yaml
+++ b/src/infra/docker-compose.yaml
@@ -8,15 +8,15 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
     ports:
-      - '${POSTGRES_PORT}:5432'
+      - '5432:5432'
     networks:
       - my_network
-    command: ['postgres', '-c', 'listen_addresses=*']
+    command: ['postgres', '-c', 'listen_addresses=0.0.0.0']
     healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -U ${POSTGRES_USER}']
-      interval: 10s
+      test: ['CMD-SHELL', 'pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}']
+      interval: 5s
       timeout: 5s
-      retries: 5
+      retries: 10
 
   app:
     image: node:18-alpine
@@ -25,7 +25,8 @@ services:
     volumes:
       - .:/app
     depends_on:
-      - sem-patria-local-db
+      sem-patria-local-db:
+        condition: service_healthy
     environment:
       - DATABASE_URL=postgres://postgres:${POSTGRES_PASSWORD}@sem-patria-local-db:5432/${POSTGRES_DB}
     networks:
