--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -115,14 +115,10 @@ jobs:
         run: |
           echo "Prisma is using DATABASE_URL: $DATABASE_URL"
 
-      - name: 🔍 Ensure Prisma Can Connect
+      - name: 🔄 Apply Prisma Migrations
         run: |
           export DATABASE_URL="postgres://${{ secrets.POSTGRES_USER }}:${{ secrets.POSTGRES_PASSWORD }}@localhost:5432/${{ secrets.POSTGRES_DB }}?connect_timeout=10"
-          until pnpm exec prisma migrate status --schema=prisma/schema.prisma; do
-            echo "⏳ Waiting for Prisma..."
-            sleep 5
-          done
-          echo "✅ Prisma is ready."
+          pnpm exec prisma migrate deploy --schema=prisma/schema.prisma
 
       - name: 🌱 Seed Database
         run: pnpm seed
