--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,6 +22,14 @@ jobs:
       POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
       DATABASE_URL: postgres://postgres:${POSTGRES_PASSWORD}@sem-patria-local-db:5432/${POSTGRES_DB}?connect_timeout=300
       CLERK_SECRET_KEY: ${{ secrets.CLERK_SECRET_KEY }}
+      DEFAULT_SEM_PATRIA_EMAIL: ${{ secrets.DEFAULT_SEM_PATRIA_EMAIL }}
+      DEFAULT_SEM_PATRIA_PASSWORD: ${{ secrets.DEFAULT_SEM_PATRIA_PASSWORD }}
+      DEFAULT_SEM_PATRIA_NAME: ${{ secrets.DEFAULT_SEM_PATRIA_NAME }}
+      DEFAULT_SEM_PATRIA_USERNAME: ${{ secrets.DEFAULT_SEM_PATRIA_USERNAME }}
+      ADMIN_SEM_PATRIA_EMAIL: ${{ secrets.ADMIN_SEM_PATRIA_EMAIL }}
+      ADMIN_SEM_PATRIA_PASSWORD: ${{ secrets.ADMIN_SEM_PATRIA_PASSWORD }}
+      ADMIN_SEM_PATRIA_NAME: ${{ secrets.ADMIN_SEM_PATRIA_NAME }}
+      ADMIN_SEM_PATRIA_USERNAME: ${{ secrets.ADMIN_SEM_PATRIA_USERNAME }}
 
     steps:
       - name: 📥 Checkout Repository
@@ -40,6 +48,14 @@ jobs:
           echo "CLERK_TESTING_TOKEN=$CLERK_TESTING_TOKEN" >> .env
           echo "POSTGRES_USER=$POSTGRES_USER" >> .env
           echo "POSTGRES_PASSWORD=$POSTGRES_PASSWORD" >> .env
+          echo "DEFAULT_SEM_PATRIA_EMAIL=$DEFAULT_SEM_PATRIA_EMAIL" >> .env
+          echo "DEFAULT_SEM_PATRIA_PASSWORD=$DEFAULT_SEM_PATRIA_PASSWORD" >> .env
+          echo "DEFAULT_SEM_PATRIA_NAME=$DEFAULT_SEM_PATRIA_NAME" >> .env
+          echo "DEFAULT_SEM_PATRIA_USERNAME=$DEFAULT_SEM_PATRIA_USERNAME" >> .env
+          echo "ADMIN_SEM_PATRIA_EMAIL=$ADMIN_SEM_PATRIA_EMAIL" >> .env
+          echo "ADMIN_SEM_PATRIA_PASSWORD=$ADMIN_SEM_PATRIA_PASSWORD" >> .env
+          echo "ADMIN_SEM_PATRIA_NAME=$ADMIN_SEM_PATRIA_NAME" >> .env
+          echo "ADMIN_SEM_PATRIA_USERNAME=$ADMIN_SEM_PATRIA_USERNAME" >> .env
           echo "POSTGRES_PORT=$POSTGRES_PORT" >> .env
           echo "POSTGRES_DB=$POSTGRES_DB" >> .env
           echo "DATABASE_URL=postgres://postgres:$POSTGRES_PASSWORD@sem-patria-local-db:5432/$POSTGRES_DB" >> .env
