fix: run without waiting

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -133,8 +133,8 @@ jobs:
       - name: ⏳ Wait Extra Time for Next.js
         run: sleep 10
 
-      - name: ⏳ Wait for Next.js to be Ready
-        run: pnpx wait-on http://localhost:3000 --timeout 120000
+      # - name: ⏳ Wait for Next.js to be Ready
+      #   run: pnpx wait-on http://localhost:3000 --timeout 120000
 
       - name: 🧪 Run Cypress Tests
         uses: cypress-io/github-action@v6
