--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /.pnp
 .pnp.js
 .yarn/install-state.gz
+.npm
 
 # testing
 /coverage
@@ -22,6 +23,8 @@
 *.pem
 
 # debug
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -30,6 +33,11 @@ yarn-error.log*
 # local env files
 .env*.local
 .env
+
+# editors
+.idea
+.cursorignore
+.cursorrules
 
 # vercel
 .vercel
