--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
+    "react-intersection-observer": "^9.16.0",
     "react-textarea-autosize": "^8.5.7",
     "resend": "^3.2.0",
     "slugify": "^1.6.6",
