--- a/package.json
+++ b/package.json
@@ -61,11 +61,13 @@
     "@tiptap/extension-bubble-menu": "^2.3.0",
     "@tiptap/extension-code-block-lowlight": "^2.3.0",
     "@tiptap/extension-floating-menu": "^2.3.0",
+    "@tiptap/extension-mention": "^2.11.7",
     "@tiptap/extension-placeholder": "^2.2.4",
     "@tiptap/extension-youtube": "^2.3.0",
     "@tiptap/pm": "^2.2.4",
     "@tiptap/react": "^2.2.4",
     "@tiptap/starter-kit": "^2.2.4",
+    "@tiptap/suggestion": "^2.11.7",
     "@uploadthing/react": "^6.5.1",
     "@vercel/analytics": "^1.5.0",
     "@vis.gl/react-google-maps": "^1.4.0",
@@ -92,7 +94,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
     "react-intersection-observer": "^9.16.0",
-    "react-textarea-autosize": "^8.5.9",
+    "react-textarea-autosize": "^8.5.7",
     "resend": "^3.2.0",
     "slugify": "^1.6.6",
     "svix": "^1.21.0",
