--- a/.github/workflows/deploy-migrations.yml
+++ b/.github/workflows/deploy-migrations.yml
@@ -19,12 +19,12 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: Run Prisma DB Pull and Generate
+      - name: Run Prisma Generate
         env:
           DATABASE_URL: ${{ github.ref == 'refs/heads/main' && secrets.DATABASE_URL_PRODUCTION || secrets.DATABASE_URL_STAGING }}
-        run: pnpm prisma db pull && pnpm prisma generate --schema=./prisma/schema/schema.prisma
+        run: pnpm prisma generate
 
       - name: Run Prisma Migrations
         env:
           DATABASE_URL: ${{ github.ref == 'refs/heads/main' && secrets.DATABASE_URL_PRODUCTION || secrets.DATABASE_URL_STAGING }}
-        run: pnpm prisma migrate deploy --schema=./prisma/schema/schema.prisma
+        run: pnpm prisma migrate deploy
