--- a/package.json
+++ b/package.json
@@ -146,7 +146,7 @@
     "typescript": "^5.3.2"
   },
   "prisma": {
-    "schema": "./prisma"
+    "schema": "./prisma/schema.prisma"
   },
   "config": {
     "commitizen": {
