--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
     "react-intersection-observer": "^9.16.0",
+    "react-number-format": "^5.4.4",
     "react-textarea-autosize": "^8.5.9",
     "resend": "^3.2.0",
     "slugify": "^1.6.6",
